Fixed hover on mobile

--- a/styles.css
+++ b/styles.css
@@ -454,7 +454,7 @@ header {
 .expandable-card:nth-child(4) { animation-delay: 1.7s; }
 
 
-.expandable-card:hover {
+.expandable-card.hover {
   transform: scale(1.01);
   background-color: rgba(134, 134, 134, 0.5);
 }
@@ -590,7 +590,7 @@ header {
   border: 1px solid var(--nested-outline); /* adjust color & opacity as needed */
 }
 
-.nested-card:hover {
+.nested-card.hover {
   background-color: rgba(134, 134, 134, 0.5);
 }
 
